--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
+bootloader = "0.9"
